--- a/.npmignore
+++ b/.npmignore
@@ -1,2 +1,17 @@
-!templates/**/*
-media
+# dependencies
+node_modules
+
+# builds
+build
+dist
+
+# misc
+.idea
+.vscode
+.DS_Store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# temp directories created during testing
+my-tests-*
