--- a/template/default/package.json
+++ b/template/default/package.json
@@ -6,8 +6,8 @@
     "license": "{{license}}",
     "repository": "{{repo}}",
     "scripts": {
-        "test": "wdio config/qa.js",
-        "test:local": "wdio config/local.js"
+        "test": "wdio config/local.js",
+        "test:remote": "wdio config/browserstack.js"
     },
     "devDependencies": {
         "@nascentdigital/e2e-wdio": "^0.1.1",
@@ -23,9 +23,6 @@
         "query-string": "^6.9.0",
         "react": "^16.12.0",
         "react-lattice": "^1.0.5",
-        "ts-node": "^8.5.4",
-        "tsconfig-paths": "^3.9.0",
-        "tslint": "^5.20.1",
         "typescript": "^3.7.2",
         "webdriverio": "^5.16.10"
     }
