--- a/template/javascript/package.json
+++ b/template/javascript/package.json
@@ -10,7 +10,7 @@
         "test:remote": "wdio config/browserstack.js"
     },
     "devDependencies": {
-        "@nascentdigital/e2e-wdio": "^0.1.1",
+        "@nascentdigital/wdio-extend": "^1.0.0",
         "@wdio/cli": "^5.16.10",
         "@wdio/local-runner": "^5.16.10",
         "@wdio/mocha-framework": "^5.16.10",
